HTML Done I think

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Hangman</title>
+    <title>Hankman</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -16,13 +16,38 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css">
   </head>
 
-  <body>
-    <header>
-      <!-- place navbar here -->
-    </header>
-    <main></main>
+  <body class="bg-333">
+    <main>
+      <div class="container text-center">
+        <p class="display-1 my-2 text-white fw-bold">Hankman</p>
+
+        <div id="difficultySelection"> <!-- ! REMOVE d-none -->
+          <p class="display-5 my-2 text-white">Select Difficulty</p>
+          <button class="btn btn-transparent border border-1 border-success difficulty-btn scale text-success m-3" onclick="startGame('easy')">Easy</button>
+          <button class="btn btn-transparent border border-1 border-warning difficulty-btn scale text-warning m-3" onclick="startGame('medium')">Medium</button>
+          <button class="btn btn-transparent border border-1 border-danger difficulty-btn scale text-danger m-3" onclick="startGame('hard')">Hard</button>
+        </div>
+
+        <div id="difficultyBox" class="my-2 p-3 fw-bold"> <!-- ! ADD d-none -->
+        </div>
+
+        <div id="gameArea" class="my-2"> <!-- ! ADD d-none -->
+          <p id="wordDisplay" class="display-4 my-2 text-white">_ _ _ _ _</p>
+          <div class="my-2 d-flex align-items-center justify-content-center">
+            <input type="text" id="letterInput" maxlength="1" placeholder="Enter a Letter" class="mx-2 form-control d-inline-block border border-1 border-white bg-transparent text-white w-auto">
+            <button id="guessBtn" class="mx-2 btn btn-transparent border border-1 border-warning scale text-warning" onclick="guessLetter()">Guess</button>
+          </div>
+          <p id="wrongLetters" class="fw-bold text-danger my-2">Wrong Guesses: </p>
+          <img src="imgs/image6.jpg" id="imgChange" class="stickiesImg my-2">
+          <div class="my-2">
+            <button id="restartBtn" class="btn btn-transparent border border-1 border-danger text-danger scale" onclick="restartGame()">Restart Game</button>
+          </div>
+        </div>
+      </div>
+    </main>
     <footer>
       <!-- place footer here -->
     </footer>
@@ -38,5 +63,6 @@
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
     ></script>
+    <script src="script.js"></script>
   </body>
 </html>
