--- a/index.html
+++ b/index.html
@@ -60,16 +60,23 @@
               <div id="gameArea" class="my-2 d-none">
                 <p id="wordDisplay" class="display-4 my-2 text-white"></p>
                 <div class="my-2 row d-flex align-items-center justify-content-center">
-                  <div class="col-lg-2 col-sm-4 my-3">
-                    <input type="text" id="letterInput" maxlength="1" placeholder="Enter a Letter" class="text-center mx-2 form-control d-inline-block border border-1 border-white bg-transparent text-white w-auto">
+                  <div class="col-lg-6 col-sm-12 my-3 d-flex align-items-center justify-content-end d-none d-lg-flex d-xl-flex">
+                    <input type="text" id="letterInput" maxlength="1" placeholder="Enter a Letter" class="text-center mx-2 form-control d-inline-block border border-1 border-white bg-transparent text-white w-25">
                   </div>
-                  <div class="col-lg-2 col-sm-4 my-3">
-                    <button id="guessBtn" class="mx-2 btn btn-transparent border border-1 border-warning scale text-warning w-100" onclick="guessLetter()">Guess</button>
+                  <div class="col-lg-6 col-sm-12 my-3 d-flex align-items-center justify-content-start d-none d-lg-flex d-xl-flex">
+                    <button id="guessBtn" class="mx-2 btn btn-transparent border border-1 border-warning scale text-warning w-25" onclick="guessLetter()">Guess</button>
                   </div>
-                  
+                  <div class="col-lg-6 col-sm-12 my-3 d-flex align-items-center justify-content-center d-lg-none d-xl-none">
+                    <input type="text" id="letterInput" maxlength="1" placeholder="Enter a Letter" class="text-center mx-2 form-control d-inline-block border border-1 border-white bg-transparent text-white w-25">
+                  </div>
+                  <div class="col-lg-6 col-sm-12 my-3 d-flex align-items-center justify-content-center d-lg-none d-xl-none">
+                    <button id="guessBtn" class="mx-2 btn btn-transparent border border-1 border-warning scale text-warning w-25" onclick="guessLetter()">Guess</button>
+                  </div>
                 </div>
                 <p id="wrongLetters" class="fw-bold text-danger my-2">Wrong Guesses: </p>
-                <img src="imgs/image6.jpg" id="imgChange" class="stickiesImg my-2">
+                <video autoplay>
+                  <source src="vids/video6.mp4" id="vidChange" type="video/mp4">
+                </video>
                 <div class="my-2">
                   <button id="restartBtn" class="btn btn-transparent border border-1 border-danger text-danger scale" onclick="restartGame()">Restart Game</button>
                 </div>
@@ -79,17 +86,18 @@
         </div>
       </div>
       <div class="container-fluid position-absolute z-3 size d-flex align-items-center justify-content-center d-none" id="endContainer">
-      <div class="container d-block">
-        <div class="row">
-          <div class="col-12 border border-3 border-white rounded-4 text-center">
-            <div class="row my-5">
-              <div class="col-12">
-                <div class="bg-333 text-white display-1 h-75" id="endText"></div>
+        <div class="container d-block">
+          <div class="row">
+            <div class="col-12 border border-3 border-white rounded-4 text-center">
+              <div class="row my-5">
+                <div class="col-12">
+                  <div class="bg-333 text-white display-1 h-75" id="endText"></div>
+                </div>
               </div>
-            </div>
-            <div class="row my-5">
-              <div class="col-12">
-                <button id="restartBtn" class="btn btn-transparent border border-1 border-danger text-danger scale my-2" onclick="restartGame()">Restart Game</button>
+              <div class="row my-5">
+                <div class="col-12">
+                  <button id="restartBtn" class="btn btn-transparent border border-1 border-danger text-danger scale my-2" onclick="restartGame()">Restart Game</button>
+                </div>
               </div>
             </div>
           </div>
